--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<script src="https://cdn.jsdelivr.net/npm/webmidi"></script>
-
 <head>
+<script src="https://cdn.jsdelivr.net/npm/webmidi@3.1.6/dist/iife/webmidi.iife.min.js"></script>
+  
 <style>
 .pitch {
   padding: 10px 20px; 
