updated midi to use all octaves

--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@ WebMidi.enable(function(err) {
 
 function onMidiEvent(event, input) {
   var note = event.note.number;
-  var nearestPitch = findNearestPitch(note);
-
+  
+  // Get the active pitches
+  var activePitches = Array.from(document.querySelectorAll('.pitch.active')).map(btn => btn.textContent);
+  
+  var nearestPitch = findNearestPitch(note, activePitches);
+  
   var selectOutput = document.getElementById("midi-output");
   var output = WebMidi.outputs[Number(selectOutput.value)];
 
@@ -121,36 +125,39 @@ function playMidiNote(pitch, input) {
 }
 
   
-  const noteToMidi = {
-  "C": 60,
-  "C#/Db": 61,
-  "D": 62, 
-  "D#/Eb": 63,
-  "E": 64,
-  "F": 65,
-  "F#/Gb": 66,
-  "G": 67,
-  "G#/Ab": 68, 
-  "A": 69,
-  "A#/Bb": 70,
-  "B": 71
+const noteToMidi = {
+  "C": 0,
+  "C#/Db": 1,
+  "D": 2, 
+  "D#/Eb": 3,
+  "E": 4,
+  "F": 5,
+  "F#/Gb": 6,
+  "G": 7,
+  "G#/Ab": 8, 
+  "A": 9,
+  "A#/Bb": 10,
+  "B": 11
 };
 
 
-function findNearestPitch(note) {
+
+function findNearestPitch(note, activePitches) {
   var nearestPitch = null;
   var nearestDistance = Infinity;
+  var octave = getOctave(note);
   for (var i = 0; i < activePitches.length; i++) {
     var pitch = activePitches[i];
-    var midi = noteToMidi[pitch];
+    var midi = noteToMidi[pitch] + octave * 12;
     var distance = Math.abs(note - midi);
     if (distance < nearestDistance) {
       nearestDistance = distance;
-      nearestPitch = pitch;
+      nearestPitch = midi;
     }
   }
   return nearestPitch;
 }
+
 
 var output = WebMidi.outputs[0];  // Choose the first output device.
 
@@ -158,4 +165,9 @@ function playMidiNote(pitch) {
   output.playNote(pitch, 1);  // Channel 1.
 }
 
+function getOctave(midiNoteNumber) {
+  return Math.floor(midiNoteNumber / 12) - 1;
+}
+
+  
 </script>
